# libqttgbot

./: .gitignore  CMakeLists.txt  conanfile.py
examples/echo/: CMakeLists.txt  main.cpp
examples/echo/EchoBot/: EchoBot.cpp  EchoBot.h
examples/echo/Main/: Main.cpp  Main.h
src/: Bot.cpp  Bot.h
src/BotApi/: AccessManager.cpp  AccessManager.h
src/Chat/: Chat.cpp  Chat.h
src/Message/: Message.cpp  Message.h
src/Reply/: Reply.h
src/Update/: Update.cpp  Update.h
src/User/: User.cpp  User.h
